# auto_code_gen

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: main.rs
