[package]
name = "codegen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-provider = { workspace = true }
rgpt-types = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true } 
tokio-stream = { workspace = true }
chrono = { workspace = true }

users = "0.11.0"
nix = { version = "0.29.0", features = ["user", "fs"] }

thiserror = { workspace = true }


[dev-dependencies]
tracing-test = { workspace = true }
